# ArtimesOne

./: .env.example  .gitignore  README.md  pyproject.toml
artimesone/: __init__.py  __main__.py  app.py  config.py  db.py  lists.py  scheduler.py
artimesone/agents/: __init__.py  chat.py  models.py  summarizer.py  tools.py
artimesone/collectors/: __init__.py
artimesone/collectors/youtube/: __init__.py  api.py  apify.py  collector.py
artimesone/migrations/: 0001_initial.sql  0002_video_stats.sql  0003_source_last_check.sql  0004_pass_and_lists.sql  __init__.py
artimesone/pipeline/: __init__.py  summarize.py
artimesone/telegram/: __init__.py  format.py  stream.py  webhook.py
artimesone/web/: filters.py  filters_sql.py
artimesone/web/routes/: chat.py  dashboard.py  items.py  libraries.py  projects.py  rollups.py  runs.py  sources.py  topics.py
artimesone/web/static/: add-to-list.js  style.css
tests/: conftest.py  test_apify_client.py  test_app_boot.py  test_chat.py  test_chat_agent.py  test_collection_round.py  test_config.py  test_dashboard.py  test_filters.py  test_items.py  test_list_tools.py  test_lists.py  test_migrations.py  test_pass.py  test_pipeline.py  test_retry_button.py  test_rollups.py  test_runs.py  test_scheduler_helpers.py  test_scheduler_pipeline.py  test_smoke.py  test_source_detail.py  test_sources_crud.py  test_summarizer.py  test_telegram_format.py  test_telegram_webhook.py  test_topics.py  test_visibility_filter.py  test_write_boundary.py  test_youtube_api.py  test_youtube_discover.py  test_youtube_fetch.py
(+21 files in other folders)
