[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artimesone"
version = "0.1.0"
description = "ArtimesOne — personal AI assistant: collects, summarizes, and lets you chat about content from your subscribed sources."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jason" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27",
    "pydantic-ai>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "asgi-lifespan>=2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["artimesone"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["artimesone"]

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
